--- a/templates/login.html
+++ b/templates/login.html
@@ -2,17 +2,17 @@
 
 
 <center>
-    <h1>Login</h1>
-    <form action="" method="post">
+    <form action="" method="post" style="width: 30%;border: 1px solid rgb(171, 171, 171);padding: 2rem 4rem;margin: 3rem auto;">
+        <h1>Login</h1>
         <div>
-            <div>
-                <input type="text" required name="username" placeholder="username" id="">
+            <div style="margin-top: 1rem;">
+                <input type="text" class="form-control" required name="username" placeholder="username" id="">
             </div>
-            <div>
-                <input type="password" placeholder="password" required name="password" id="">
+            <div style="margin-top: 1rem;">
+                <input type="password" class="form-control" placeholder="password" required name="password" id="">
             </div>
-            <div>
-                <input type="submit" name="submit" id="">
+            <div style="margin-top: 1rem;">
+                <input type="submit" class="btn btn-success" name="submit" id="">
             </div>
         </div>
     </form>
